# WakaMate-AI

./: .gitignore  README.md  cors_proxy.py  cors_proxy1.py  cors_proxy2.py  pyproject.toml
wakamate_ai.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
wakamate_ai_caption/: pyproject.toml
wakamate_ai_caption/configs/: config.yml
wakamate_ai_caption/src/wakamate_ai_caption/: register.py  wakamate_ai_caption_function.py
wakamate_ai_caption/src/wakamate_ai_caption.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
wakamate_backend/: package-lock.json  package.json  server.js
wakamate_backend/controller/: analysisController.js  deliveryController.js  productController.js  userController.js
wakamate_backend/middleware/: authMiddleware.js
wakamate_backend/model/: Delivery.js  Product.js  User.js
wakamate_backend/routes/: analysisRoutes.js  deliveryRoutes.js  productRoutes.js  userRoutes.js
wakamate_backend/utils/: sendVerificationEmail.js  stockNotifier.js
wakamate_deliver_route/: .env  pyproject.toml
wakamate_deliver_route/configs/: config.yml
wakamate_deliver_route/src/wakamate_deliver_route/: register.py  wakamate_deliver_route_function.py
wakamate_deliver_route/src/wakamate_deliver_route.egg-info/: SOURCES.txt  top_level.txt
wakamate_frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
wakamate_frontend/src/: App.jsx  index.css
wakamate_frontend/src/Pages/: AICap.jsx  Dashboard.jsx  (+4 more)
wakamate_inventory_summary/: .env  .env.sample  pyproject.toml
wakamate_inventory_summary/configs/: config.yml
(+32 files in other folders)
