[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wakamate-ai"
version = "0.1.0"
description = "WakaMate AI Assistant"
requires-python = ">=3.11"
dependencies = [
    "aiqtoolkit>=1.1.0",
    # Add your project dependencies here
    "fastapi",
    "uvicorn[standard]",
    # Install AIQ toolkit from PyPI or git
    # "aiqtoolkit",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["wakamate_*"]

# Code formatting
[tool.black]
line-length = 120
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 120
